--- a/notefy/Base.lproj/Main.storyboard
+++ b/notefy/Base.lproj/Main.storyboard
@@ -64,7 +64,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1036.5" y="450.5"/>
+            <point key="canvasLocation" x="1012.5" y="450.5"/>
         </scene>
         <!--Sign InVC-->
         <scene sceneID="GyQ-ob-DSf">
@@ -376,13 +376,6 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJQ-bd-moE" customClass="DesignView" customModule="notefy" customModuleProvider="target">
                                                     <rect key="frame" x="8" y="0.0" width="359" height="257"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
-                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
-                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
-                                                            </constraints>
-                                                        </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88888" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXf-4F-g4g">
                                                             <rect key="frame" x="297" y="60" width="57" height="21"/>
                                                             <constraints>
@@ -405,6 +398,13 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="85" id="9J5-C1-bHm"/>
                                                                 <constraint firstAttribute="height" constant="78" id="eJy-bd-haZ"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
+                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
+                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
@@ -449,6 +449,7 @@
                                         <connections>
                                             <outlet property="noteCaption" destination="nNW-X3-AGt" id="o58-xo-vFX"/>
                                             <outlet property="noteImg" destination="BpA-Ey-hft" id="lRg-fd-m1M"/>
+                                            <outlet property="noteLikeImage" destination="BvN-ac-YR6" id="heC-0j-XdO"/>
                                             <outlet property="noteLikes" destination="MXf-4F-g4g" id="KRx-6r-nEf"/>
                                         </connections>
                                     </tableViewCell>
@@ -486,7 +487,7 @@
                     </connections>
                 </tapGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="568.5" y="450.5"/>
+            <point key="canvasLocation" x="559.5" y="450.5"/>
         </scene>
     </scenes>
     <resources>
