--- a/notefy/Base.lproj/Main.storyboard
+++ b/notefy/Base.lproj/Main.storyboard
@@ -60,6 +60,7 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina47"/>
                     <connections>
                         <outlet property="mapView" destination="eOb-1t-XkU" id="pyj-2e-OLd"/>
+                        <segue destination="45e-dE-TeF" kind="show" identifier="gotoNoteFeeds" id="K04-OR-YnC"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -376,6 +377,13 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJQ-bd-moE" customClass="DesignView" customModule="notefy" customModuleProvider="target">
                                                     <rect key="frame" x="8" y="0.0" width="359" height="257"/>
                                                     <subviews>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
+                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
+                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
+                                                            </constraints>
+                                                        </imageView>
                                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88888" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXf-4F-g4g">
                                                             <rect key="frame" x="297" y="60" width="57" height="21"/>
                                                             <constraints>
@@ -398,13 +406,6 @@
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="85" id="9J5-C1-bHm"/>
                                                                 <constraint firstAttribute="height" constant="78" id="eJy-bd-haZ"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
-                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
-                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
@@ -499,4 +500,7 @@
         <image name="profile" width="113" height="155"/>
         <image name="snap_btn" width="54" height="62"/>
     </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="K04-OR-YnC"/>
+    </inferredMetricsTieBreakers>
 </document>
