--- a/notefy/Base.lproj/Main.storyboard
+++ b/notefy/Base.lproj/Main.storyboard
@@ -377,14 +377,7 @@
                                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LJQ-bd-moE" customClass="DesignView" customModule="notefy" customModuleProvider="target">
                                                     <rect key="frame" x="8" y="0.0" width="359" height="257"/>
                                                     <subviews>
-                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
-                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
-                                                            <constraints>
-                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
-                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
-                                                            </constraints>
-                                                        </imageView>
-                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="88888" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXf-4F-g4g">
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="MXf-4F-g4g">
                                                             <rect key="frame" x="297" y="60" width="57" height="21"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="57" id="JkX-XR-L6Q"/>
@@ -394,18 +387,24 @@
                                                             <color key="textColor" red="0.7686274509803922" green="0.81176470588235294" blue="0.83137254901960789" alpha="1" colorSpace="calibratedRGB"/>
                                                             <nil key="highlightedColor"/>
                                                         </label>
-                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNW-X3-AGt">
-                                                            <rect key="frame" x="8" y="89" width="343" height="142"/>
-                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
-                                                            <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut </string>
-                                                            <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="12"/>
-                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
-                                                        </textView>
-                                                        <imageView clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profile" translatesAutoresizingMaskIntoConstraints="NO" id="BpA-Ey-hft" customClass="cameraDesignViewSmoothRect" customModule="notefy" customModuleProvider="target">
+                                                        <imageView clipsSubviews="YES" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location-map-flat" translatesAutoresizingMaskIntoConstraints="NO" id="BpA-Ey-hft" customClass="cameraDesignViewSmoothRect" customModule="notefy" customModuleProvider="target">
                                                             <rect key="frame" x="137" y="8" width="85" height="78"/>
                                                             <constraints>
                                                                 <constraint firstAttribute="width" constant="85" id="9J5-C1-bHm"/>
                                                                 <constraint firstAttribute="height" constant="78" id="eJy-bd-haZ"/>
+                                                            </constraints>
+                                                        </imageView>
+                                                        <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" editable="NO" text="Empty Notes..." textAlignment="center" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nNW-X3-AGt">
+                                                            <rect key="frame" x="8" y="89" width="343" height="142"/>
+                                                            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                            <fontDescription key="fontDescription" name="GurmukhiMN" family="Gurmukhi MN" pointSize="12"/>
+                                                            <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                                        </textView>
+                                                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="2" translatesAutoresizingMaskIntoConstraints="NO" id="BvN-ac-YR6">
+                                                            <rect key="frame" x="297" y="8" width="54" height="58"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="54" id="0ZP-3C-B1F"/>
+                                                                <constraint firstAttribute="height" constant="58" id="9KM-LU-Nc9"/>
                                                             </constraints>
                                                         </imageView>
                                                     </subviews>
@@ -497,7 +496,6 @@
         <image name="add-post" width="88" height="88"/>
         <image name="f" width="352" height="328"/>
         <image name="location-map-flat" width="256" height="256"/>
-        <image name="profile" width="113" height="155"/>
         <image name="snap_btn" width="54" height="62"/>
     </resources>
     <inferredMetricsTieBreakers>
